Fix Width Overflow Bug

--- a/main.css
+++ b/main.css
@@ -187,7 +187,6 @@ div#post {
   text-align: justify;
   line-height: 1.53;
   height: auto;
-  width: inherit;
   word-break: normal;
   word-wrap: break-word;
   position: relative;
